# bio_fly_cyber_lateralization

./: .gitignore  NATURE_LEVEL_EXPERIMENT_REPORT.md  README.md  pyproject.toml  requirements.lock.txt
docs/: ARTICLE_REVISION_AND_FUNCTIONAL_SIMULATION_CN.md  DATA_DOWNLOAD_AND_MB_DISCOVERY_CN.md  DN_BEHAVIOR_READOUT_REPORT_CN.md  DPM_OPTOGENETIC_VALIDATION_CN.md  EON_MULTIMODAL_REPRODUCTION_CN.md  FULL_PROJECT_GUIDE.md  INDEX_CN.md  LATERALIZATION_BEHAVIOR_SIMULATION_CN.md  MB_DN_MOTOR_READOUT_CN.md  MOTOR_AND_ODOR_BRIDGE_CN.md  NON_BIOLOGIST_VALIDATION_LOGIC_CN.md  NON_BIOLOGIST_VALIDATION_LOGIC_CN.tex  OCT_MCH_ASSAY_VIDEO_RENDERING_CN.md  OCT_MCH_MIRROR_KINEMATICS_CN.md  OLFACTORY_PERTURBATION_MEMORY_CN.md  PROJECT_IMPLEMENTATION_STATUS_CN.md  STRUCTURE_BEHAVIOR_LINKAGE_CN.md  TARGET_PRIORITIZATION_CN.md  TEACHER_BRIEFING_CN.md  TEACHER_PPT_SPEECH_CN.md  TEACHER_PPT_SPEECH_CN.tex  behavior_experiment.md  gobble.sty  research_plan.md  resource_estimate.md
outputs/: demo_metadata.csv
paper/: FIGURE_AND_VIDEO_INDEX_CN.md  FIGURE_PROMPTS_EN.md  FlyWireClassify.md  NATURE_STYLE_DRAFT_CN.md  Review0318.md  main.tex  main_connectivity.tex  main_merged.tex  main_merged0601.tex  main_skeleton.tex  neurotransmitter_lateralization_teacher_cn.tex  sample.bib
ppt/: IMAGE_PROMPTS_FOR_GROUP_MEETING.md  README.md  cyber_fly_teacher_report.tex  cyber_fly_teacher_report_speaker_notes.md  cyber_fly_teacher_report_speaker_notes.tex
scripts/: analyze_mushroom_body_asymmetry.py  analyze_structure_behavior_linkage.py  benchmark_gpu_propagation.py  bootstrap_env.sh  run_repro_smoke.py  (+31 more)
(+134 files in other folders)
